--- a/midterm/quiz_1/myservice/notebooks/quiz_multi.ipynb
+++ b/midterm/quiz_1/myservice/notebooks/quiz_multi.ipynb
@@ -595,7 +595,7 @@
     "services = Service.objects.all()\n",
     "\n",
     "for service in services:\n",
-    "    print(f'Name: { service.name.upper() }, Provider: {  } , New Price: ${ service.price * 2 }')"
+    "    print(f'Name: { service.name.upper() }, Provider: { service.service_provider.name } , New Price: ${ service.price * 2 }')"
    ]
   },
   {
