add week_7 and fix quiz_multi

--- a/midterm/quiz_1/myservice/notebooks/quiz_multi.ipynb
+++ b/midterm/quiz_1/myservice/notebooks/quiz_multi.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,11 +206,17 @@
     "    phone = \"089-999-9999\"  \n",
     ")\n",
     "\n",
-    "all_ser = Service.objects.all()\n",
-    "for ser in all_ser:\n",
+    "service_names = [\n",
+    "    \"Haircut\",\n",
+    "    \"Manicure\",\n",
+    "    \"Massage\",\n",
+    "    \"Hair Shower\"\n",
+    "]\n",
+    "\n",
+    "for service in service_names:\n",
     "    services = Service.objects.create(\n",
     "        service_provider = pro_1,\n",
-    "        name = ser.name,\n",
+    "        name = service,\n",
     "        price = 500\n",
     "    )\n",
     "\n"
@@ -218,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -228,16 +234,6 @@
       "Service Name: Haircut, Price: 500, Provider: Super Provider\n",
       "Service Name: Manicure, Price: 500, Provider: Super Provider\n",
       "Service Name: Massage, Price: 500, Provider: Super Provider\n",
-      "Service Name: Haircut, Price: 500, Provider: Super Provider\n",
-      "Service Name: Manicure, Price: 500, Provider: Super Provider\n",
-      "Service Name: Massage, Price: 500, Provider: Super Provider\n",
-      "Service Name: Haircut, Price: 500, Provider: Super Provider\n",
-      "Service Name: Manicure, Price: 500, Provider: Super Provider\n",
-      "Service Name: Massage, Price: 500, Provider: Super Provider\n",
-      "Service Name: Haircut, Price: 500, Provider: Super Provider\n",
-      "Service Name: Manicure, Price: 500, Provider: Super Provider\n",
-      "Service Name: Massage, Price: 500, Provider: Super Provider\n",
-      "Service Name: Hair Shower, Price: 500, Provider: Super Provider\n",
       "Service Name: Hair Shower, Price: 500, Provider: Super Provider\n"
      ]
     }
