--- a/midterm/practice/employee_management/notebooks/query.ipynb
+++ b/midterm/practice/employee_management/notebooks/query.ipynb
@@ -159,6 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 5\n",
     "soft_dev = Position.objects.get(\n",
     "    name = 'Software Developer'\n",
     ")\n",
@@ -173,6 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 6\n",
     "emp = Employee.objects.filter(\n",
     "    position__name ='Marketing Manager'\n",
     ").delete()"
@@ -184,9 +186,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 7\n",
     "emp = Employee.objects.filter(\n",
-    "    salary__\n",
-    ").delete()"
+    "    salary__lt = 59000\n",
+    ").delete()\n",
+    "\n",
+    "print(emp)"
    ]
   }
  ],
